# niji

./: .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  preview.mov  rustfmt.toml
.github/workflows/: deploy-docs.yml
assets/modules/gtk/: colors.lua  deps.txt  install.lua  module.lua
assets/modules/hyprland/: README.md  module.lua  theme.conf.mustache
assets/modules/hyprpaper/: hyprpaper.conf.mustache  module.lua
assets/modules/kitty/: module.lua
assets/themes/: dracula.toml  gruvbox-light.toml
crates/console/: Cargo.toml
crates/macros/: Cargo.toml
crates/main/: Cargo.toml
crates/main/src/: app.rs  cli.rs  file_manager.rs  files.rs  main.rs  module.rs  module_manager.rs  template.rs  theme_manager.rs
crates/main/src/lua/api/: color.rs  console.rs  filesystem.rs  mod.rs  module_meta.rs  template.rs  xdg.rs
crates/main/src/utils/: oklch.rs
crates/templates/: Cargo.toml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  builtin-themes.md  cli.md  custom-themes.md  getting-started.md
guide/: book.toml
guide/src/: SUMMARY.md  configuration.md
modules/gtk/: README.md  colors.lua  install.lua  module.lua  niji_colors.css.mustache
modules/gtk_old/: module.lua
modules/hyprland/: README.md  module.lua  theme.conf.mustache
modules/hyprpaper/: README.md  hyprpaper.conf.mustache  module.lua
modules/kitty/: kitty.conf.mustache  module.lua  niji.conf.mustache
modules/mako/: deps.txt  module.lua
modules/sway/: module.lua  theme.mustache
modules/waybar/: module.lua  style.css.mustache
niji/: Cargo.toml
niji-console/: Cargo.toml
niji-console/src/: __private_api.rs  console.rs  lib.rs  macros.rs
niji-macros/: Cargo.toml
niji-macros/src/: lib.rs
niji-templates/: Cargo.toml
niji-templates/src/: fmt.rs  lib.rs  parse.rs  template.rs  value.rs
niji/src/: app.rs  cli.rs  config.rs  console.rs  file_manager.rs  files.rs  lua_runtime.rs  main.rs  module.rs  module_manager.rs  template.rs  theme_manager.rs
niji/src/api/: col.rs  mod.rs
niji/src/lua/: mod.rs  module.rs  runtime.rs
niji/src/lua/api/: col.rs  color.rs  console.rs  csl.rs  filesystem.rs  fs.lua  fs.rs  mod.rs  mod_.rs  module.rs  module_meta.rs  os.rs  template.rs  util.rs  xdg.rs
niji/src/types/: color.rs
niji/src/utils/: fs.rs  mod.rs  oklch.rs  xdg.rs
src/: color_math.rs  config.rs  files.rs  main.rs  oklch.rs
src/types/: color.rs
src/utils/: mod.rs
themes/: dracula.toml  gruvbox.toml  tokyonight.toml
(+45 files in other folders)
