[package]
name = "niji"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
mlua = { version = "0.9.1", features = ["luajit"] }
niji-macros = { version = "0.1.0", path = "../niji-macros" }
serde = { version = "1.0.190", features = ["derive"] }
serde_with = "3.4.0"
thiserror = "1.0.50"
toml = "0.8.6"
ultraviolet = "0.9.2"
