[package]
name = "niji"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = "4.4.8"
csv = "1.3.0"
log = "0.4.20"
mlua = { version = "0.9.1", features = ["luajit"] }
niji-console = { version = "0.1.0", path = "../niji-console" }
niji-macros = { version = "0.1.0", path = "../niji-macros" }
niji-templates = { version = "0.1.0", path = "../niji-templates" }
oklab = "1.0.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_with = "3.4.0"
thiserror = "1.0.50"
toml = "0.8.6"
