[package]
name = "niji"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = "4.5.27"
csv = "1.3.1"
log = "0.4.25"
mlua = { version = "0.9.9", features = ["luajit"] }
niji_console = { version = "0.1.0", path = "../console" }
niji_macros = { version = "0.1.0", path = "../macros" }
niji_templates = { version = "0.1.0", path = "../templates" }
oklab = "1.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
shellexpand = "3.1.0"
thiserror = "1.0.69"
toml = "0.8.19"
